yo creo que es muy bueno hacer un commit en este punto porque esta casi listo y falta revisar errores y horrores

--- a/appendix/our-eff-sxdh.tex
+++ b/appendix/our-eff-sxdh.tex
@@ -9,7 +9,7 @@
 \item $12\sqrt[3]{n} + 16$ for membership in $H$ and $G$,
 \item $2\sqrt[3]{n}$ for $[\matr{A'}]_1$,
 \item $2$ for $[\vecb{\omega}']_1$,
-\item $4\sqrt[3]{n}$ for proof  $\pi_{\mathcal{Q}}$,
+\item $4\sqrt[3]{n}$ for proof  $\pi_{\sfbits}$,
 \item $2$ for proof $\pi_h$,
 \item $8$ for $\pi_g$,
 \end{itemize}
@@ -21,7 +21,7 @@ The number of elements of $\GG_2$ required  for the signature is:
 \item $28\sqrt[3]{n} + 10$ for membership in $H$ and $G$,
 \item $2\sqrt[3]{n}-2$ for $[\matr{C}']_2$,
 \item $2$ for $[\vecb{\psi}']_2$,
-\item $4\sqrt[3]{n}$ for proof  $\pi_{\mathcal{Q}}$,
+\item $4\sqrt[3]{n}$ for proof  $\pi_{\sfbits}$,
 \item $2$ for $\pi_h$,
 \end{itemize}
 which adds up to $34\sqrt[3]{n} + 18$. Additionally, it requires $\sqrt[3]{n}$ elements of $\Z_q$.
