--- a/intro/discussion.tex
+++ b/intro/discussion.tex
@@ -4,10 +4,13 @@
 
 %Furthermore, Groth and Lu also conjectured that is hard to find $vk_1,\ldots,vk_n\in\GG$ such that $\sum_{i=1}^m e(\vecb{a}_i,vk_i)=0$ \cite{AC:GroLu07}. They give some evidence that this assumption might be true proving its hardness in the generic bilinear group model. It is direct to note that $g_{\vecb{a}_1,\ldots,\vecb{a}_m}(vk_1,\ldots,vk_m) = \sum_{i=1}^m e(\vecb{a}_i,vk_i)$ is collision resistant given the hardness of the aforementioned assumption.\footnote{The only problem with this definition is that $g$ outputs elements in $\GG_T$. To use Chandran et al.'s set-membership we need to get $g$'s output  in the base group. We solve this problem giving $vk_i\vecb{a}_i$ in the base group.}
 
-\subsubsection{Getting rid of the permutation pairing assumption}
+\subsubsection{Getting rid of the permutation pairing assumption.}
 
-Our starting point in the search of a more standard replacement for the PPA is the following. Consider the set of binary vectors of size $m$ and the function $w$ defined as the hamming weight of a binary vector $w(\vecb{\beta}) = \sum_{i=1}^m \beta_i$. Clearly, $w(\vecb{\beta})=w(\vecb{\beta}')$ and $\vecb{\beta},\vecb{\beta}'\in\bits^m$ implies that $\vecb{\beta}'$ is a permutation of $\vecb{\beta}$ unconditionally.
-Each possible ring member generates a single $\beta\in\bits$ and her extended verification key contains $\vecb{a}=\Com(\beta)$, $\vecb{d} = \Com(\beta vk)$, and $vk$. Additionally it contains $\pi$, a Groth-Sahai proof that $\beta\in\bits$, and $\theta$, a Groth-Sahai proof that $y = \beta vk$ where $y$ is $\vecb{d}$'s opening.
+%Our starting point in the search of a more standard replacement for the PPA is the following.
+Consider the set of binary vectors of size $m$ and the function $w$ defined as the hamming weight of a binary vector $w(\vecb{\beta}) = \sum_{i=1}^m \beta_i$.  As with the PPA, $w(\vecb{\beta})=w(\vecb{\beta}')$ and $\vecb{\beta},\vecb{\beta}'\in\bits^m$ implies that $\vecb{\beta}'$ is a permutation of $\vecb{\beta}$. However, in this case $\vecb{\beta}'$ is a permutation of $\vecb{\beta}$ unconditionally.
+
+We use this property of binary vectors as a replacement of the PPA as follows.
+Each possible ring member generates a single $\beta\in\bits$ and her extended verification key contains commitments $\vecb{a}=\Com(\beta)$, $\vecb{d} = \Com(\beta vk)$, and $vk$. Additionally it contains $\pi$, a Groth-Sahai proof that $\beta\in\bits$, and $\theta$, a Groth-Sahai proof that $y = \beta vk$ where $y$ is $\vecb{d}$'s opening.
 
 Define $h(\matr{A}):=w(\vecb{\beta})$ and $g_\matr{A}(\vecb{vk}) := \sum_i \beta_i vk_i$.
 %Intuitively, by the hiding property of the commitment scheme, the adversary who produces a collision given $\matr{A}$ will produce a collision with roughly the same probability even if $\matr{A}$ is computed from a random binary vector $\vecb{\beta}^*$ of hamming weight 1. Collision resistance would follow from the fact that with probability roughly $1/m$, $\vecb{\beta}^*$ has its unique 1 at the same position $i$ where $vk'_i \neq vk_i$. But this reasoning doesn't work since $g$ is not computable and thus, is not possible to reduce an attack to $g$ to an efficient distinguisher for the commitment scheme.
@@ -15,18 +18,19 @@ Define $h(\matr{A}):=w(\vecb{\beta})$ and $g_\matr{A}(\vecb{vk}) := \sum_i \beta
 %We will show that what is indeed hard is to compute a Groth-Sahai proof that $g_\matr{A}(\vecb{vk})=g_\matr{A}(\vecb{vk}')$ if $\vecb{vk}\neq\vecb{vk}'$.
 Although $g$ and $h$ are not efficiently computable\footnote{Even more, $g$ is not even collision resistance. For small rings, the adversary may guess $\vecb{\beta}$ with non-negligible probability and solve $\sum_i\beta_i(vk_i-vk'_i)=0$ for some non trivial $\vecb{vk}'$. Though, this adversary is not even not aware that it has found a collision.}, from the extended verification keys it is possible to compute commitments to $h(\matr{A})$ and $g_\matr{A}(\vecb{vk})$ using the homomorphic properties of Groth-Sahai commitments. Indeed $\Com(h(\matr{A})) = \sum_i \vecb{a}_i$ and $\Com(g_\matr{A}(\vecb{vk})) = \sum_i \vecb{d}_i$. Using this fact together with the re-randomizability of Groth-Sahai proofs (see \cite{C:BCCKLS09}) we will emulate the ring signature in the PPA setting.
 
-Assume the signer wish to sign on behalf of the ring of extended verification keys $R=\{\vecb{vk}_{1,1},\ldots,\vecb{vk}_{n^{2/3},m}\}$ knowing the secret key corresponding to $\vecb{vk}_{\mu,\nu}$.
-In the first part of the signature, the signer proves knowledge of some $\Com(h(\matr{A}_\mu))$ from $H = \{\Com(h(\matr{A}_1),\ldots,\Com(\matr{A}_{n^{2/3}}))$ and then commits to $\matr{A}'$, a re-ran\-do\-mi\-za\-tion of a permutation of $\matr{A}_\mu$ such that $\vecb{a}'_1$ is a re-randomization of $\vecb{a}_{\mu,\nu}$. Then it shows with a Groth-Sahai proof that a) $\sum_i \vecb{a}'_i - \Com(h(\matr{A}_\mu)) = \Com(0)$, and b) $\beta'_1\ldots,\beta'_m\in\bits$ re-randomizing proofs $\pi_{\mu,1},\ldots,\pi_{\mu,m}$. It follows that $\vecb{\beta}'$, the vector of openings of $\matr{A}'$, is a permutation of $\vecb{\beta}_\mu$, the vector of openings of $\matr{A}_\mu$.
+Assume the signer wish to sign on behalf of the ring $R=\{vk_{1,1},\ldots,vk_{n^{2/3},m}\}$ knowing the secret key corresponding to $vk_{\mu,\nu}$.
+In the first part of the signature, the signer proves knowledge of some $\Com(h(\matr{A}_\mu))$ from $H = \{\Com(h(\matr{A}_1),\ldots,\allowbreak\Com(\matr{A}_{n^{2/3}}))$ and then commits to $\matr{A}'$, a re-ran\-do\-mi\-za\-tion of a permutation of $\matr{A}_\mu$ such that $\vecb{a}'_1$ is a re-randomization of $\vecb{a}_{\mu,\nu}$. Then it shows with a Groth-Sahai proof that a) $\sum_i \vecb{a}'_i - \Com(h(\matr{A}_\mu)) = \Com(0)$, and b) $\beta'_1\ldots,\beta'_m\in\bits$ re-randomizing proofs $\pi_{\mu,1},\ldots,\pi_{\mu,m}$. It follows that $\vecb{\beta}'$, the vector of openings of $\matr{A}'$, is a permutation of $\vecb{\beta}_\mu$, the vector of openings of $\matr{A}_\mu$.
 
-In the second part the signer proves knowledge of some $\Com(g_{\matr{A}_\mu}(\vecb{vk}_\mu))$ from $G = \{\Com(g_{\matr{A}_1}(\vecb{vk}_1),\allowbreak\ldots,g_{\matr{A}_{n^{2/3}}}(\vecb{vk}_{n^{2/3}}))$ and re-randomize commitments $\vecb{d}_{\mu,1},\allowbreak\ldots,\allowbreak\vecb{d}_{\mu,m}$ obtaining and $\vecb{d}'_1,\ldots,\vecb{d}'_m$ and compute commitments $\vecb{c}'_1,\allowbreak\ldots,\vecb{c}'_m$ to $vk_{\mu,1},\ldots,vk_{\mu,m}$, respectively. We will show that, from $\theta_{\mu,1},\ldots,\theta_{\mu,m}$ (recall that they are proofs that $y_{\mu,i} = \beta_{\mu,i}vk_{\mu,i}$) one can derive a proof that $\sum_i \beta'_i vk'_i  = \sum_{i} \beta_{\mu,i}vk_{\mu,i}$, where $vk'_i$ is the opening of $\vecb{c}'_i$, or equivalently a proof that $g_{\matr{A}'}(\vecb{vk}') = g_{\matr{A}_\mu}(\vecb{vk}_\mu)$.
+In the second part the signer proves knowledge of some $\Com(g_{\matr{A}_\mu}(\vecb{vk}_\mu))$ from $G = \{\Com(g_{\matr{A}_1}(\vecb{vk}_1)),\allowbreak\ldots,\Com(g_{\matr{A}_{n^{2/3}}}(\vecb{vk}_{n^{2/3}}))\}$ and  compute commitments $\vecb{c}'_1,\allowbreak\ldots,\vecb{c}'_m$ to $vk'_1=vk_{\mu,1},\ldots,vk'_m=vk_{\mu,m}$, respectively. We will show that, from $\vecb{d}_{\mu,1},\ldots,\vecb{d}_{\mu,m}$ and $\theta_{\mu,1},\ldots,\theta_{\mu,m}$ one can derive a proof that $\sum_i \beta'_i vk'_i  = \sum_{i} \beta_{\mu,i}vk_{\mu,i}$, or equivalently a proof that $g_{\matr{A}'}(\vecb{vk}') = g_{\matr{A}_\mu}(\vecb{vk}_\mu)$.
 
 %An adversary forging a signature for some $\vecb{vk}\notin R$ will produce some $\vecb{c}'_1$ which is not a re-randomizations of any of $\vecb{c}_{\mu,1},\ldots,\vecb{c}_{\mu,m}$. Or equivalently, $sk_1\neq sk_{\mu,j}$ for all $j$.
 
-Suppose an adversary wish to convince the verifier that $\vecb{vk}$ is in $R$ while in fact $\vecb{vk}\notin R$.
-From the hiding property of the commitment scheme
-it follows that the adversary may convince the verifier
-%it follows that an adversary which given $\matr{A}$ produces $\vecb{c}'_1$ which is not a re-randomization of any of $\vecb{c}_{\mu,1},\ldots,\vecb{c}_{\mu,m}$, will also produce a non-randomization
-with roughly the same probability even if $\matr{A} = (\vecb{a}_1,\ldots,\vecb{a}_Q)$, where $Q$ is an upper bound on the maximum number of verification keys, is computed from a random binary vector $\vecb{\beta}$ of hamming weight 1. Since $\vecb{\beta}'$ is a permutation of $\vecb{\beta}_\mu$, then $\vecb{\beta}'$ is uniformly distributed over the binary vectors of hamming weight 1 conditioned on $w(\vecb{\beta}_\mu)=1$. Therefore, conditioned on $w(\vecb{\beta}_\mu)=1$, the probability that $\beta'_i=1$ is $1/m$ for all $i$, in particular for $i=1$. The probability that $w(\vecb{\beta}_\mu)=1$ is $m/Q$, and then we conclude that with probability $m/Q\cdot 1/m = 1/Q$ the equation $\sum_{i}\beta'_i vk'_i = \sum_{i}\beta_{\mu,i} vk_{\mu,i}$ is in fact $vk'_1 = vk_j$, for some $1\leq j \leq m$. We conclude that $\vecb{vk}=\vecb{vk}_{\mu,j}$ but this contradicts the assumption that $\vecb{vk}\notin R$. 
+Suppose an adversary wish to convince the verifier that $vk=vk'_1$ is in $R$ while in fact $vk\notin R$, in particular this implies that $\vecb{vk}'$ is not a permutation of $\vecb{vk}_\mu$. Without loss of generality, we may assume that $\vecb{vk}_\mu$ has not repeated entries since the verifier might drop all repeated entries in $R$ without changing the statement. Then there is some $vk_{\mu,i}$ such that $vk_{\mu,i}\neq vk'_j$ for all $j$.
+We can guess such $\mu,i$ pair beforehand with probability $1/Q$, where $Q$ is the maximum number of verification keys, and abort in case of a bad guess.
+
+We jump to a game where we set $\vecb{\beta}$ of
+ hamming weight 1 such that $\beta_{\mu,i}=1$, where $\vecb{\beta}$ is the vector of openings of $\matr{A} = (\vecb{a}_1,\ldots,\vecb{a}_Q)$.
+By the hiding property of the commitment scheme, the adversary might notice such change in $\matr{A}$ only with negligible probability. Furthermore, in this game the equation $\sum_{i}\beta'_i vk'_i = \sum_{i}\beta_{\mu,i} vk_{\mu,i}$ is in fact $vk'_j = vk_{\mu,j}$, for some $1\leq j \leq m$, and hence the adversary has 0 probability of wining. We conclude that $\vecb{vk}'$ is  permutation of $\vecb{vk}_{\mu}$ and then $vk = vk'_1\in R$.
 
 %Define $\vecb{a}_i = \Com_{ck}(\beta_i)$, a Groth-Sahai commitment to $\beta_i$, and let $\matr{A} = (\vecb{a}_1,\ldots, \vecb{a}_m)$. Define $h(\matr{A})$ as the hamming weight of $\vecb{\beta} = (\beta_1,\ldots,\beta_m)^\top$ and define $g_{\matr{A}}(\vecb{vk}) = \sum_{i=1}^m \beta_ivk_i$.  Now is still true $h$ is collision resistant, but is also hard to find collisions for $g$. Consider an adversary that  given $\matr{A}$ outputs $\vecb{vk},\vecb{vk}'$ a collision for $g_\matr{A}$. By the hiding property of the commitment scheme, the adversary will produce a collision with roughly the same probability even if $\matr{A}$ is computed from a random binary vector $\vecb{\beta}^*$ of hamming weight 1. With probability roughly $1/m$, $\vecb{\beta}^*$ has its unique 1 at the same position $i$ where $vk'_i \neq vk_i$. We conclude that $g$ is collision resistant under the hiding property of Groth-Sahai commitments which in turn, relies on the SXDH assumption.
 
@@ -38,14 +42,14 @@ with roughly the same probability even if $\matr{A} = (\vecb{a}_1,\ldots,\vecb{a
 %For proving statement a) it suffices to compute a Groth-Sahai proof that $\sum_{i=1}^m \vecb{a}'_i - \sum_{i=1}^m\vecb{a}_i = 0$. Note that this requires computing commitments to $\vecb{a}_i$ to keep anonymity. For  statement b) we add proofs that $\beta_i(\beta_i-1)=0$ and use this proofs to derive a Groth-Sahai proof for the satisfiability of the verification equation of $\beta'_i(\beta'_i-1)=0$ (which requires commitments to Groth-Sahai proofs). For c) we add to the verification key Groth-Sahai proofs that $\beta_i vk_i = y_i$, which allows to derive a proof for $\sum_{i=1}^m \beta_i vk_i = y$ using the homomorphic properties of Groth-Sahai proofs. Again, we give a Groth-Sahai proof of the satisifiability of the verification equation for $\sum_{i=1}^m \beta_i vk_i = y$.
 
 \subsubsection{The erasures assumption.}
-The PPA-based ring signature has the disadvantage that the PPA is a non-constant size assumptions also known as $q$-assumptions. Furthermore, the PPA construction has the following additional problem. A ring signature must tolerate the adaptive corruption of the verification keys. That is, an adversary may adaptively ask for the random coins used for generating the verification keys which in this case amounts to reveal $x_i$ and $x_i^2$. This is incompatible with the PPA (unless one considers a much stronger interactive assumption), so the only alternative is to assume that the key generation algorithm can erase its random coins.\footnote{We elaborate more on the erasures assumption for ring signatures in App.~\ref{sec:erasures}.}
+The PPA-based ring signature has the disadvantage that the PPA is a non-constant size assumptions also known as $q$-assumptions. Furthermore, a ring signature must tolerate the adaptive corruption of the verification keys. That is, an adversary may adaptively ask for the random coins used for generating the verification keys which in this case amounts to reveal $x_i$ and $x_i^2$. This is incompatible with the PPA (unless one considers a much stronger interactive assumption), so the only alternative is to assume that the key generation algorithm can erase its random coins.\footnote{We elaborate more on the erasures assumption for ring signatures in App.~\ref{sec:erasures}.}
 
 But this is not the case for the SXDH-based construction.
 To avoid erasures we need to show unforgeability even when the adversary may request the openings and random coins used to generate the extended verification keys. To do so, we sample $\vecb{a}_j$ with $\beta_j=0$ for all $j$ so that, in the unforgeability proof, we need to change $\vecb{\beta}$ at only a single position. Thereby, when the adversary corrupts the $j$-th party it receives $\beta_j=0$, $sk_j$, and all the random coins used to generate the extended verification key.
 
-We can argue as before that an adversary may produce a forgery
+We can argue as before that an adversary may produce $\vecb{vk}'$, which is not a permutation of $\vecb{vk}_\mu$,
 %it follows that an adversary which given $\matr{A}$ produces $\vecb{c}'_1$ which is not a re-randomization of any of $\vecb{c}_{\mu,1},\ldots,\vecb{c}_{\mu,m}$, will also produce a non-randomization
-with roughly the same probability even if $\matr{A}$ is computed from a random binary vector $\vecb{\beta}$ of hamming weight 1. In this case we can answer all corruption queries with the exception of the unique verification key for which $\beta_i=1$. But anyway, the probability that the adversary corrupts this verification keys no greater than $1/Q$ so we can safely abort if this is the case. The rest of the argument is exactly as before.
+with roughly the same probability even if $\matr{A}$ is computed from a random binary vector $\vecb{\beta}$ of hamming weight 1 with the unique $1$ in the right place. In this case we can answer all corruption queries with the exception of the unique verification key for which $\beta=1$. But anyway, the probability that the adversary corrupts this verification keys no greater than $1/Q$ so we can safely abort if this is the case. The rest of the argument is exactly as before.
 
 
 %Consider a game $\sfGame_0$ where the adversary wins if it finds a forgery for some ring $R$. Consider a game $\sfGame_1$ exactly as $\sfGame_0$ but the game aborts if the adversary corrupts the $i$-th party or $vk'_1 = vk'_j$, for some random $j$. Is not hard to see that $\Pr[\sfGame_1]\geq 1/m\Pr[\sfGame_0]$. Now consider another game $\sfGame_2$, exactly as $\sfGame_1$, but where $\beta_i=1$. Note that in $\sfGame_2$ it is impossible to find collisions since $\sum_{j=1}^m\beta_jvk_j = vk_i\neq vk'_i$ (otherwise the game would have aborted). Furthermore, the probability that the adversary finds collisions in $\sfGame_2$ should be essentially the same as in $\sfGame_1$ or we can break the hiding property of $\Com$ embedding a challenge in $\vecb{a}_i$. Note that, for this argument to work, it is crucial that $g_\matr{A}(vk_1,\ldots,vk_m)$ is efficiently computable. Otherwise the distinguisher for $\Com$ will not be efficient. This is one of the main challenges for building $g$ that we face in section \ref{sec:hf-sxdh}. 
